# database-schema

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/mysql-diesel/: Cargo.toml  README.md  docker-compose.yml  structure.sql
examples/mysql-diesel/certs/: root-ca.pem
examples/mysql-diesel/scripts/: generate-certs.sh
examples/mysql-diesel/src/: main.rs
examples/mysql-sqlx/: Cargo.toml  README.md  docker-compose.yml  structure.sql
examples/mysql-sqlx/certs/: client-req.pem  server-key.pem  server-req.pem
examples/mysql-sqlx/src/: main.rs
examples/postgres-diesel/: Cargo.toml  Dockerfile  README.md  structure.sql
examples/postgres-diesel/migrations/2023-08-28-162356_add_user/: up.sql
examples/postgres-diesel/src/: main.rs
examples/postgres-sqlx/: Cargo.toml  README.md  docker-compose.yml  structure.sql
examples/postgres-sqlx/certs/: client-cert.pem  client-key.pem  root-ca-key.pem  server-cert.pem
examples/postgres-sqlx/src/: main.rs
examples/sqlite-sqlx/: Cargo.toml  README.md  structure.sql
examples/sqlite-sqlx-in-memory/: Cargo.toml  README.md  test.db
examples/sqlite-sqlx-in-memory/migrations/: 20230827152633_add_users.sql
examples/sqlite-sqlx-in-memory/src/: main.rs
examples/sqlite-sqlx/src/: main.rs
fixtures/diesel/mysql/migrations/2023-08-27-215620_add_users/: up.sql
fixtures/diesel/postgres/: diesel-postgres-structure.sql
fixtures/diesel/postgres/migrations/2023-08-27-215620_add_users/: up.sql
fixtures/sqlx/postgres/: sqlx-postgres-structure.sql
fixtures/sqlx/postgres/migrations/: 20230827160610_add_users.sql
src/: error.rs  lib.rs  macros.rs  process.rs
src/mysql/: mod.rs  options.rs
src/postgres/: mod.rs
src/sqlite/: diesel.rs  mod.rs  sqlx.rs
